# film-scanner

./: .gitignore  README.md  pyproject.toml
config/: default.toml
docs/: architecture.md  configuration.md  installation.md  operating.md
src/film_scanner/: __init__.py  camera.py  cli.py  config.py  logging_setup.py  motor.py  stepper_cli.py  storage.py  ui.py  vision.py  web_ui.py  workflow.py
tests/: test_camera.py  test_config.py  test_motor.py  test_stepper_cli.py  test_storage.py  test_web_ui.py  test_workflow.py
