[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "film-scanner"
version = "0.1.0"
description = "Frame-by-frame 8 mm film digitization system for Raspberry Pi"
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
pi = [
  "RPi.GPIO>=0.7",
  "Pillow>=8",
]
pi-camera = [
  "picamera2>=0.1",
]
vision = [
  "opencv-python-headless>=4.5.1.48; python_version >= '3.8'",
  "numpy>=1.19,<1.22; python_version >= '3.8'",
]

[project.scripts]
film-scanner = "film_scanner.cli:main"
film-scanner-ui = "film_scanner.ui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
